changed a few texts that were to long

--- a/FoM German Translation/localisation/localization.json
+++ b/FoM German Translation/localisation/localization.json
@@ -12056,14 +12056,14 @@
     "spells/default/description": "<n/a>",
     "spells/default/name": "<n/a>",
     "spells/full_restore/description": "Stellt die gesamte Ausdauer und LP wieder her.",
-    "spells/full_restore/name": "Vollstaendige Heilung",
+    "spells/full_restore/name": "Heilen",
     "spells/full_restore/type": "Heilung",
-    "spells/growth/description": "Laesst die Pflanzen in einem 3x3-Bereich vollstaendig wachsen. Er kann auch das Wachstum von Baeumen um 1 Stufe beschleunigen",
+    "spells/growth/description": "Laesst die Pflanzen in einem 3x3-Bereich vollstaendig wachsen. Kann auch das Wachstum von Baeumen um 1 Stufe beschleunigen",
     "spells/growth/name": "Wachsen",
-    "spells/growth/type": "Landwirdschaft",
-    "spells/summon_rain/description": "Beschwoert einen kurzen Regensturm herauf, der alle eure Pflanzen bewaessert.",
-    "spells/summon_rain/name": "Regen beschwoeren",
-    "spells/summon_rain/type": "Landwirdschaft",
+    "spells/growth/type": "Landwirtschaft",
+    "spells/summon_rain/description": "Beschwoert einen kurzen Regensturm herauf, der alle Pflanzen bewaessert.",
+    "spells/summon_rain/name": "Regen",
+    "spells/summon_rain/type": "Landwirtschaft",
     "ranching/animals/horse/core/female_other": "eine Stute",
     "ranching/animals/horse/core/male_other": "ein Hengst",
     "ranching/animals/horse/core/name": "Pferd",
